--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,5 @@
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-
-# show_downloads: ["true" or "false" (unquoted) to indicate whether to provide a download URL]
-# google_analytics: [Your Google Analytics tracking ID]
-
-title: [LU-ZT.githu.io]
-description: [Zitong LU's Homepage.]
-
-# github:
-#   zip_url: http://example.com/download.zip
-#   another_url: another value
+title: Cayman theme
+description: Cayman is a clean, responsive theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-cayman
