--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: LU-ZT.githu.io
-description: Zitong LU's Homepage. 
+title: LU-ZT.github.io
+logo: /assets/img/logo.png
+description: Zitong LU's homepage. 
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
